--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <h1 class="title">Studia podyplomowe</h1>
         <h2 class="title">PWA</h2>
     </div>
+
+    </div>
+    <script src="./js/main.js"></script>
+</body>
 </body>
 
 </html>
