--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Aplikacja - studia podyplomowe</title>
     <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" crossorigin="use-credentials" href="./manifest.js on" />
+    <meta name="theme-color" content="white" />
 </head>
 
 <body class="fullscreen">
