--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="white" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Hello World">
+    <meta name="msapplication-TileImage" content="./images/hello-icon-144.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
     <title>Aplikacja - studia podyplomowe</title>
     <link rel="stylesheet" href="./css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" crossorigin="use-credentials" href="./manifest.json" />
-    <meta name="theme-color" content="white" />
+    <link rel="apple-touch-icon" href="images/hello-icon-152.png">
+
 </head>
 
 <body class="fullscreen">
     <div class="container">
         <h1 class="title">Studia podyplomowe</h1>
         <h2 class="title">PWA</h2>
+        <h3>Zmiana 6</h3>
     </div>
 
-    </div>
     <script src="./js/main.js"></script>
-</body>
 </body>
 
 </html>
